# talks

./: .gitignore  .gitlab-ci.yml  LICENSE  LICENSE.txt  Makefile  README.md  build  build-one  make  shell.nix
2020-cant-hack-this/segments/: intro.adoc  practical.adoc  thanks.adoc  theoretical.adoc
2020-cant-hack-this/segments/practical/: nix-search.adoc  nix-shell.adoc
2020-cant-hack-this/talk/: talk.adoc  template.js
2020-fantastic-actors/: make  presentation.adoc  talk.adoc  template.js
2020-fantastic-actors/assets/examples/: rust-channels.out  rust-channels.rs
2020-fantastic-actors/parts/: 2-me.adoc  3-crash-course.adoc  5-cabs.adoc
2020-fantastic-actors/segments/: 0-enodriver.adoc  3-database.adoc  7-thanks.adoc
2020-fantastic-actors/styles/: core.css  main.css
2020-fantastic-actors/talk/: template.js
2020-scary-acronyms/: presentation.adoc  talk.adoc  template.js
2020-scary-acronyms/segments/: 1-OIBIT.adoc  2-HRTB.adoc  3-GAT.adoc  4-ZST-DST.adoc
2020-scary-acronyms/talk/: talk.adoc  template.js
2022-microdosing-rust/codes/distance/: Cargo.toml  README.md
2022-microdosing-rust/codes/distance/src/: main.rs
2022-microdosing-rust/codes/mele/: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
2022-microdosing-rust/codes/mele/src/: main.rs  piezo.rs  track.rs  tracks.rs
2022-microdosing-rust/codes/mele/src/tracks/: mial_byc_slub.rs  never_gonna_give_you_up.rs  sandstorm.rs  the_model.rs
2022-microdosing-rust/talk/: talk.adoc  template.js
_asciidoctor-pdf/: Dockerfile  build
_common/segments/: me-myself-and-i.adoc
(+11 files in other folders)
